<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">AudioBook Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_library">Library</string>
    <string name="action_clear">Clear DB</string>
    <string name="action_cover">Find Cover Art</string>

    <!-- Settings -->
    <string name="pref_audiobook">audiobook</string>
    <string name="pref_audiobook_location">audiobook_location</string>
    <string name="pref_audiobook_location_missing">Select the folder containing your audio books.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_firstlaunch">first_launch</string>

    <!-- Library -->
    <string name="playlist_empty_list">Ooops no audio books found! Please make sure you have selected the correct folder where your audio books are stored.</string>
    <string name="title_activity_library">Library</string>

    <string name="content_authority">com.etechtour.audiobookplayer</string>

    <!-- SharedPreferences -->
    <string name="shared_num_files">num_files</string>
    <string name="shared_album_id">album_id</string>
    <string name="shared_track_id">track_id</string>
    <string name="shared_current_track_progress">playback_position</string>
    <string name="shared_current_track_in_cursor">track_position</string>

    <string name="format_num_files">File # <xliff:g id="current_file">%1$s</xliff:g> of <xliff:g id="total_files">%2$s</xliff:g></string>
    <string name="format_percentage_complete"><xliff:g id="percentage">%s</xliff:g>\% Complete</string>

    <!-- CoverArt -->
    <string name="title_activity_cover">New Cover Art</string>
    <string name="cover_albumid">album_id</string>
    <string name="cover_title">title</string>


    <!-- Empty Views -->
    <string name="empty_album">Select a book for playback.</string>
    <string name="empty_author">No Content To Display</string>
    <string name="empty_nav_title">Missing Audiobook</string>
    <string name="empty_nav_audiobook"></string>
    <string name="empty_nav_file">No Files Selected</string>
    <string name="empty_nav_percent">Not Started.</string>

    <!-- Content Descriptions -->
    <string name="cd_coverart_edittext">Text field, input value to search for cover art.</string>
    <string name="cd_coverart_search">Search</string>
    <string name="cd_playpause">Toggle between play and pause</string>
    <string name="cd_rewindbig">Rewind 1 minute</string>
    <string name="cd_rewindsmall">Rewind 10 seconds</string>
    <string name="cd_fastforwardbig">Fastforward 1 minute</string>
    <string name="cd_fastforwardsmall">Fastforward 10 seconds</string>

    <!-- Widget -->
    <string name="widget_empty">Open Audiobook Player</string>
</resources>
