<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_library"
        android:orderInCategory="100"
        android:title="@string/action_library"
        app:showAsAction="ifRoom"
        android:icon="@drawable/music_node_white"
        />
    <item
        android:id="@+id/action_cover"
        android:orderInCategory="100"
        android:title="@string/action_cover"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="never" />
</menu>
