<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:id="@+id/nav_linlayout"
    >

    <ImageView
        android:id="@+id/nav_albumart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/placeholder"
        android:layout_gravity="center_vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        >
        <TextView
            android:id="@+id/nav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/empty_nav_title"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/nav_audiobook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_nav_audiobook"
            android:textSize="20sp"
            android:singleLine="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nav_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rating"
                android:textSize="20sp"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_ratingbar"
                android:numStars="5"
                android:isIndicator="false"
                style="?android:attr/ratingBarStyleSmall"
                android:clickable="true"
                android:paddingTop="3dp"
                android:stepSize="0.5"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/nav_numfiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_nav_file"
            android:textSize="20sp"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/nav_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_nav_percent"
            android:textSize="20sp"
            android:singleLine="true"
            />
    </LinearLayout>
</LinearLayout>
